--- a/smart_car.css
+++ b/smart_car.css
@@ -159,19 +159,8 @@ header nav ul li a:hover {
     max-width: 900px;
 }
 
-.code-repository a {
-    font-size: 18px;
-    color: #ffffff;
-    text-decoration: none;
-    padding: 10px;
-    background-color: #4CAF50;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
 
-.code-repository a:hover {
-    background-color: #45a049;
-}
+
 
 /* Footer Styles */
 footer {
@@ -211,3 +200,56 @@ footer {
         font-size: 16px; /* Adjust font size for better readability */
     }
 }
+/* From Uiverse.io by vinodjangid07 */
+.Btn {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
+    position: relative;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: all .3s;
+    margin-left: 47%;
+    margin-bottom: 10px;
+}
+  
+  .svgContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    backdrop-filter: blur(0px);
+    letter-spacing: 0.8px;
+    border-radius: 10px;
+    transition: all .3s;
+    border: 1px solid rgba(156, 156, 156, 0.466);
+  }
+  
+  .BG {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #353434;
+    z-index: -1;
+    border-radius: 10px;
+    pointer-events: none;
+    transition: all .3s;
+  }
+  
+  .Btn:hover .BG {
+    transform: rotate(35deg);
+    transform-origin: bottom;
+  }
+  
+  .Btn:hover .svgContainer {
+    background-color: rgba(245, 234, 234, 0.466);
+    backdrop-filter: blur(4px);
+  }
+  
