--- a/skills.css
+++ b/skills.css
@@ -87,7 +87,7 @@ header nav ul li a:hover {
     border-radius: 15px;
     box-shadow: 10px 4px 10px rgba(0, 0, 0, 0.2); /* Soft shadow */
     border: 2px solid rgba(0, 0, 0, 0.2); /* Subtle border */
-    user-select: none;
+    user-select: text;
     margin-top: 50px;
     margin-left: 50px; 
 }
@@ -95,7 +95,7 @@ header nav ul li a:hover {
 /* Skill Box */
 .skill-box {
     width: 100%;
-    margin: 25px 0;
+    margin: 17px 0;
 }
 
 .skill-box .title {
@@ -110,7 +110,7 @@ header nav ul li a:hover {
     width: 100%;
     border-radius: 6px;
     margin-top: 6px;
-    background: rgba(0, 0, 0, 0.2); /* More transparency */
+    background: rgba(41, 40, 40, 0.2); /* More transparency */
 }
 
 .skill-per {
@@ -120,7 +120,7 @@ header nav ul li a:hover {
     width: 0; /* Starts from 0% width */
     border-radius: 6px;
     background: linear-gradient(135deg, #000000, #cccccc); /* Light gradient */
-    box-shadow: 0 2px 6px rgba(15, 15, 15, 0.3);
+    box-shadow: 0 2px 6px rgba(117, 114, 114, 0.3);
     animation: progress 0.4s ease-in-out forwards;
     opacity: 0;
 }
@@ -136,12 +136,12 @@ header nav ul li a:hover {
 }
 
 .skill-per.java {
-    width: 60%;
+    width: 70%;
     animation-delay: 0.2s;
 }
 
 .skill-per.python {
-    width: 70%;
+    width: 85%;
     animation-delay: 0.2s;
 }
 
@@ -149,6 +149,16 @@ header nav ul li a:hover {
     width: 80%;
     animation-delay: 0.3s;
 }
+.skill-per.cpp {
+    width: 70%;
+    animation-delay: 0.4s;
+}
+
+.skill-per.go {
+    width: 80%;
+    animation-delay: 0.5s;
+}
+
 
 @keyframes progress {
     0% {
@@ -295,6 +305,7 @@ button:active {
     margin: 5px 0;
     color: white;
     text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+    
   }
   
   /* Skill list */
@@ -306,6 +317,7 @@ button:active {
     line-height: 1.5;
     opacity: 0; /* Hidden when folded */
     transition: opacity 0.3s ease-in-out;
+    
   }
   
   /* Show text when hovered */
