--- a/face_recognition.css
+++ b/face_recognition.css
@@ -122,7 +122,7 @@ header nav ul li a.active {
 
 .project-highlights h2 {
     font-size: 28px;
-    color: #0d47a1;
+    color: #000000;
     margin-bottom: 25px;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -170,7 +170,7 @@ header nav ul li a.active {
 .project-gallery h2 {
     font-size: 28px;
     margin-bottom: 20px;
-    color: #0d47a1;
+    color: #000000;
 }
 
 .project-gallery .gallery {
